--- a/utils/Settings.ipynb
+++ b/utils/Settings.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Create the 'prompt' dropdown menu with options\n",
     "prompt_dropdown = widgets.Dropdown(\n",
-    "    options=['None 0', 'None 1', 'None 2', 'Generic 0','Generic 1','Generic 2', 'Specific 0', 'Specific 1', 'Specific 2'],\n",
+    "    options=['None 0', 'None 1', 'None 2', 'Generic 0','Generic 1','Generic 2', 'Specific 0', 'Specific 1', 'Specific 2', 'zero'],\n",
     "    value='None 0',\n",
     "    description='Prompt:'\n",
     ")\n",
