--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -271,6 +271,9 @@
     "elif prompt_dropdown.value == 'Specific 2':\n",
     "    with open('Prompts/prompts_ID_specific 2.txt', 'r') as f:\n",
     "        lines = f.read().splitlines()\n",
+    "elif prompt_dropdown.value == 'zero':\n",
+    "    with open('Prompts/prompts_ID_zero.txt', 'r') as f:\n",
+    "        lines = f.read().splitlines()\n",
     "  \n",
     "# Store the contents in separate variables\n",
     "#instructions_text = lines[0]\n",
