commit to merge

--- a/PlotResults.ipynb
+++ b/PlotResults.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f42d2b40faf2494fbcd1361b1c42cfdb",
+       "model_id": "470052425a544145b3e3275a076023e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a3782ecf6fc4219a79ad53dae664942",
+       "model_id": "a9721ca917264a77800452252248b330",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "321a97e96a3f476ea6c46f3d428a9730",
+       "model_id": "0bb8036c9f684960a32a294f134c9369",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2f04af0aa9f488fbfcc9b6b48830003",
+       "model_id": "bff538010b184170b492dee115426f22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07a694f0c8464a81a80e6bc16292e6a7",
+       "model_id": "77581b813203484084cefb514595a5f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c332f839f9714306af97134072132672",
+       "model_id": "bc81beea67534b348ed1ab23ac8e5c7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capstoneproject",
    "language": "python",
    "name": "python3"
   },
@@ -162,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
