Adjusted for zero_prompt

--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c7ab7413",
    "metadata": {},
    "outputs": [
@@ -11,10 +11,10 @@
      "evalue": "name 'temperatures' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 140\u001b[0m\n\u001b[1;32m    137\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m AssistantResponse(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124massistant\u001b[39m\u001b[38;5;124m'\u001b[39m, final_response)\n\u001b[1;32m    139\u001b[0m \u001b[38;5;66;03m# Iterate over the different temperature settings\u001b[39;00m\n\u001b[0;32m--> 140\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m temperatures:\n\u001b[1;32m    141\u001b[0m \n\u001b[1;32m    142\u001b[0m     \u001b[38;5;66;03m# Repeat the whole experiment n times\u001b[39;00m\n\u001b[1;32m    143\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m experiment \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(NrOfExper):\n\u001b[1;32m    144\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m---\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mStarting experiment \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m---\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'temperatures' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 161\u001b[0m\n\u001b[0;32m    158\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m AssistantResponse(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124massistant\u001b[39m\u001b[38;5;124m'\u001b[39m, final_response)\n\u001b[0;32m    160\u001b[0m \u001b[38;5;66;03m# Iterate over the different temperature settings\u001b[39;00m\n\u001b[1;32m--> 161\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtemperatures\u001b[49m:\n\u001b[0;32m    162\u001b[0m \n\u001b[0;32m    163\u001b[0m     \u001b[38;5;66;03m# Repeat the whole experiment n times\u001b[39;00m\n\u001b[0;32m    164\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m experiment \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(NrOfExper):\n\u001b[0;32m    165\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m---\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mStarting experiment \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m---\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'temperatures' is not defined"
      ]
     }
    ],
@@ -69,27 +69,27 @@
     "    \n",
     "    # Add training data and iteration prompt\n",
     "    if training_data:\n",
-    "        messages.append({\"role\": \"assistant\", \"content\": \"Previously, we have tested these formulations:\\n\" + \"\\n\".join(tested_formulations)})\n",
+    "        messages.append({\"role\": \"assistant\", \"content\": \"Previously, we have tested these combinations:\\n\" + \"\\n\".join(tested_formulations)})\n",
     "        messages.append({\"role\": \"user\", \"content\": iterate_prompt})\n",
     "        training_formulations = extract_formulations_from_training_data(training_data)\n",
     "    # Add the new user prompt to ask for three unique formulations\n",
     "    if enable_TVDL_strategy == 1:\n",
-    "        messages.append({\"role\": \"user\", \"content\": \"Output 3 three completly new and untested formulations with a extremly high expected compressive strength , each of the three must adhere to the given structure and parameter limits!.\"})\n",
+    "        messages.append({\"role\": \"user\", \"content\": \"Output 3 three completly new and untested combinations with an extremly high expected performance , each of the three must adhere to the given structure and parameter limits!.\"})\n",
     "    else: \n",
-    "        messages.append({\"role\": \"user\", \"content\": \"Output 5 five different unique formulations with a extremly high expected compressive strength, each of the five must adhere to the given structure and parameter limits!.\"})\n",
+    "        messages.append({\"role\": \"user\", \"content\": \"Output 5 five different unique combinations with a extremly high expected performance, each of the five must adhere to the given structure and parameter limits!.\"})\n",
     "    \n",
     "    max_retries = 10  # Maximum number of retries for getting valid formulations\n",
     "    retry_count = 0  # Retry counter\n",
     "\n",
     "    while not predictions and retry_count < max_retries:\n",
     "        if retry_count > 0:\n",
-    "            messages.append({\"role\": \"user\", \"content\": \"You must propose novel and unique designs that have not been tested before!\"})\n",
+    "            messages.append({\"role\": \"user\", \"content\": \"You must propose novel and unique combinations that have not been tested before!\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(\"You must propose novel and unique designs that have not been tested before!\")\n",
+    "                print(\"You must propose novel and unique combinations that have not been tested before!\")\n",
     "        if retry_count > 1:\n",
-    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //Powderkg: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //wc: 0.45, 0.5, 0.55, 0.6 //materials: 0.7/0.3, 0.6/0.4, 0.5/0.5 //curing: Ambient curing, Heat curing\"})\n",
+    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: Ambient curing, Heat curing\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //Powderkg: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //wc: 0.45, 0.5, 0.55, 0.6 //materials: 0.7/0.3, 0.6/0.4, 0.5/0.5 //curing: Ambient curing, Heat curing\")\n",
+    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: Ambient curing, Heat curing\")\n",
     "        if retry_count > 2:\n",
     "            messages.append({\"role\": \"user\", \"content\": \"Try harder! Pay close attention to the exact format and order of ther parameters, for instance 0.6/0.4 and not 0.4/0.6\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
@@ -103,7 +103,7 @@
     "        response_lines = assistant_response.choices[0].message.content.split('\\n')\n",
     "        \n",
     "        # Define a regular expression pattern to capture the relevant information\n",
-    "        pattern = re.compile(r'Powderkg\\s*=\\s*(\\d+),\\s*wc\\s*=\\s*(\\d+\\.\\d+),\\s*materials\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*curing\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
+    "        pattern = re.compile(r'A\\s*=\\s*(\\d+),\\s*B\\s*=\\s*(\\d+\\.\\d+),\\s*C\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*D\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
     "\n",
     "        # Use list comprehension to find all matches in the response lines\n",
     "        formulations = [match.group(0) for line in response_lines for match in [pattern.search(line)] if match]\n",
@@ -137,7 +137,7 @@
     "\n",
     "        for formulation in formulations:\n",
     "            # Create the full forward task prompt\n",
-    "            forward_prompt = f\"{forward_prompt_base}\\n Considering this context, what is the compressive strength of {formulation}? Answer in this exact format: {'your estimate'} MPa\"\n",
+    "            forward_prompt = f\"{forward_prompt_base}\\n Considering this context, what is the performance of {formulation}? Answer in this exact format: {'your estimate'}\"\n",
     "\n",
     "            if conversation_dropdown.value == 'Complete':\n",
     "                print(\"Forward Prompt:\", forward_prompt)\n",
@@ -147,17 +147,17 @@
     "\n",
     "            # Extract the predicted strength from the model's response\n",
     "            try:\n",
-    "                predicted_strength_str = forward_response.choices[0].message.content.split(' ')[-2]\n",
-    "                predicted_strength_str_cleaned = predicted_strength_str.strip(\"' \") \n",
+    "                predicted_strength_str = forward_response.choices[0].message.content.split(' ')[-1]\n",
+    "                predicted_strength_str_cleaned = predicted_strength_str.strip(\"' \")\n",
     "\n",
     "                # Now convert to float\n",
     "                predicted_strength = float(predicted_strength_str_cleaned)\n",
     "            except ValueError:\n",
-    "                print(f\"Could not convert predicted strength for {formulation} to float. Skipping this formulation.\")\n",
+    "                print(f\"Could not convert performance for {formulation} to float. Skipping this combination.\")\n",
     "                continue\n",
     "\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(f\"Predicted Strength for {formulation}: {predicted_strength} MPa\")\n",
+    "                print(f\"Performance for {formulation}: {predicted_strength}\")\n",
     "\n",
     "            # Append to the predictions list\n",
     "            predictions.append((formulation, predicted_strength))\n",
@@ -170,7 +170,7 @@
     "\n",
     "    # Handle case where predictions list is empty\n",
     "    if not predictions:\n",
-    "        print(\"No valid predictions were made. Defaulting to the first formulation.\")\n",
+    "        print(\"No valid predictions were made. Defaulting to the first combination.\")\n",
     "        return {'role': 'assistant', 'content': formulations[0] if formulations else 'Unable to make valid predictions.'}\n",
     "\n",
     "    # Select the formulation with the highest predicted strength\n",
@@ -195,7 +195,6 @@
     "\n",
     "            # Select and format your training data\n",
     "            training_data, tested_formulations  = select_and_format_data(data, desired_strength)\n",
-    "            print(training_data)\n",
     "        \n",
     "        current_strength = 0.0\n",
     "        iterations = 0\n",
@@ -217,7 +216,7 @@
     "                \n",
     "            # Add the training data to the messages\n",
     "            if training_data:\n",
-    "                messages.append({\"role\": \"assistant\", \"content\": \"Previously, we have tested these formulations:\\n\" + \"\\n\".join(tested_formulations)})\n",
+    "                messages.append({\"role\": \"assistant\", \"content\": \"Previously, we have tested these combinations:\\n\" + \"\\n\".join(tested_formulations)})\n",
     "                # Add the iteration prompt\n",
     "                messages.append({\"role\": \"user\", \"content\": iterate_prompt.value})\n",
     "                \n",
@@ -246,14 +245,13 @@
     "                        \n",
     "                        if lab_result:\n",
     "                            current_strength = lab_result\n",
-    "                            print(TrainingDat)\n",
-    "                            training_data.append(f\"{TrainingDat} resulted in a strength of {current_strength} MPa.\")\n",
+    "                            training_data.append(f\"{TrainingDat} resulted in a performance of {current_strength}\")\n",
     "                            tested_formulations.append(f\"{TrainingDat}\")\n",
     "                            \n",
     "                            \n",
     "                            valid_solution = True\n",
     "                            \n",
-    "                            print('The suggested formulation achieved a strength of ', current_strength, ' MPa.')\n",
+    "                            print('The suggested formulation achieved a performance of ', current_strength)\n",
     "                        else:\n",
     "                            print(f\"Iteration {iterations}: No matching lab result found for suggestion {suggested_solution}\")\n",
     "                    else:\n",
@@ -265,7 +263,7 @@
     "                    print(f\"Iteration {iterations}: Response not from 'assistant'. Trying again.\")\n",
     "\n",
     "            if current_strength >= desired_strength:\n",
-    "                print(f\"\\nDesired compressive strength of {desired_strength} MPa achieved after {iterations} iterations. The solution is {suggested_solution}.\")\n",
+    "                print(f\"\\nDesired performance of {desired_strength} achieved after {iterations} iterations. The solution is {suggested_solution}.\")\n",
     "                break\n",
     "\n",
     "        timestamp = str(int(time.time()))\n",
@@ -289,7 +287,7 @@
     "            for data in training_data:\n",
     "                try:\n",
     "                    # parse the data to extract formulation and compressive strength\n",
-    "                    formulation, strength_str = data.split(\" resulted in a strength of \")\n",
+    "                    formulation, strength_str = data.split(\" resulted in a performance of \")\n",
     "                    strength = float(strength_str.split(\" \")[0])  # convert string to float\n",
     "                    writer.writerow([formulation, strength])\n",
     "                except ValueError as e:\n",
@@ -311,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capstoneproject",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
