--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c161ee3f",
    "metadata": {
     "scrolled": true
@@ -10,14 +10,13 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
+     "evalue": "name 'TT' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 78\u001b[0m\n\u001b[1;32m     75\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuring\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaterials\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(parse_curing)  \u001b[38;5;66;03m# Add this line\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[0;32m---> 78\u001b[0m df \u001b[38;5;241m=\u001b[39m load_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData/DiscoveryData_Sample.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     80\u001b[0m \u001b[38;5;66;03m# Initialize empty DataFrame\u001b[39;00m\n\u001b[1;32m     81\u001b[0m formulation_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFormulation\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStrength\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "Cell \u001b[0;32mIn[3], line 73\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(csv_path)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_data\u001b[39m(csv_path):\n\u001b[0;32m---> 73\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_path)\n\u001b[1;32m     74\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFA_GGBFS_ratio\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaterials\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(parse_materials)\n\u001b[1;32m     75\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuring\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaterials\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(parse_curing)  \u001b[38;5;66;03m# Add this line\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Map the dropdown value to enable_TVDL_strategy\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mTT\u001b[49m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m      3\u001b[0m     enable_TVDL_strategy \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m TT\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'TT' is not defined"
      ]
     }
    ],
@@ -52,9 +51,9 @@
     "            curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\").replace(\" (Rao et al.)\", \"\")\n",
     "            strength = row[\"fc_28dGroundTruth\"]\n",
     "            \n",
-    "            training_str = f\"Powderkg = {powder}, wc = {wc}, materials = {fa_ggbfs}, curing = {curing_method} resulted in a strength of {strength} MPa.\"\n",
+    "            training_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method} resulted in a performance of {strength}\"\n",
     "            training_data_formatted.append({'formatted_str': training_str, 'strength': strength})\n",
-    "            tested_str = f\"Powderkg = {powder}, wc = {wc}, materials = {fa_ggbfs}, curing = {curing_method}\"\n",
+    "            tested_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method}\"\n",
     "            tested_formulations.append(tested_str) \n",
     "\n",
     "        # Check if any selected data point's strength >= desired_strength\n",
@@ -65,8 +64,8 @@
     "def find_matching_result(df, suggestion):\n",
     "    if suggestion:\n",
     "        # Create the suggestion string in the same format as the formulation strings\n",
-    "        suggestion_str = f'The formulation is Powderkg = {suggestion[\"powderkg\"]}, wc = {suggestion[\"wc\"]}, materials = {suggestion[\"materials\"]}, curing = {suggestion[\"curing\"]}'\n",
-    "        TrainingDat = f'Powderkg = {suggestion[\"powderkg\"]}, wc = {suggestion[\"wc\"]}, materials = {suggestion[\"materials\"]}, curing = {suggestion[\"curing\"]}'\n",
+    "        suggestion_str = f'The combination is A = {suggestion[\"A\"]}, B = {suggestion[\"B\"]}, C = {suggestion[\"C\"]}, D = {suggestion[\"D\"]}'\n",
+    "        TrainingDat = f'A = {suggestion[\"A\"]}, B = {suggestion[\"B\"]}, C = {suggestion[\"C\"]}, D = {suggestion[\"D\"]}'\n",
     "        \n",
     "        # Look for a match in the DataFrame\n",
     "        match = df[df[\"Formulation\"].str.lower() == suggestion_str.lower()]\n",
@@ -105,46 +104,47 @@
     "        return None\n",
     "\n",
     "    # Try to parse the response as JSON\n",
-    "    try:\n",
-    "        json_data = json.loads(response)\n",
-    "        for key, value in json_data.items():\n",
-    "            normalized_key = normalize_key(key)\n",
-    "            if normalized_key:\n",
-    "                solution[normalized_key] = str(value)\n",
-    "        if solution:  # If we successfully extracted data\n",
-    "            return solution\n",
-    "    except json.JSONDecodeError:\n",
+    "    #try:\n",
+    "        #json_data = json.loads(response)\n",
+    "        #for key, value in json_data.items():\n",
+    "            #normalized_key = normalize_key(key)\n",
+    "            #if normalized_key:\n",
+    "                #solution[normalized_key] = str(value)\n",
+    "        #if solution:  # If we successfully extracted data\n",
+    "            #return solution\n",
+    "    #except json.JSONDecodeError:\n",
     "        # If JSON parsing fails, proceed with regex parsing for the plain text format\n",
-    "        keys = ['powderkg', 'wc', 'materials', 'curing']  # Updated to include 'curing'\n",
-    "        for key in keys:\n",
-    "            if key != 'curing':  # For 'curing', we might need a different approach\n",
-    "                match = re.search(fr\"{key} = (.*?)(,|$)\", response, re.IGNORECASE)\n",
-    "                if match:\n",
-    "                    value = match.group(1).strip()\n",
-    "                    solution[key] = value\n",
-    "                else:\n",
-    "                    # If any key wasn't found using regex, return None\n",
-    "                    return None\n",
+    "    keys = ['A', 'B', 'C', 'D']  # Updated to include 'curing'\n",
+    "    for key in keys:\n",
+    "        if key != 'D':  # For 'curing', we might need a different approach\n",
+    "            match = re.search(fr\"{key} = (.*?)(,|$)\", response, re.IGNORECASE)\n",
+    "            if match:\n",
+    "                value = match.group(1).strip()\n",
+    "                solution[key] = value\n",
     "            else:\n",
-    "                # Handle 'curing' specifically based on the presence of keywords\n",
-    "                if \"ambient\" in response.lower():\n",
-    "                    solution[\"curing\"] = \"Ambient curing\"\n",
-    "                elif \"heat\" in response.lower():\n",
-    "                    solution[\"curing\"] = \"Heat curing\"\n",
-    "                else:\n",
-    "                    # If 'curing' condition is not met, return None\n",
-    "                    return None\n",
-    "        return solution  # Return the solution dictionary if all keys were found with regex\n",
+    "                # If any key wasn't found using regex, return None\n",
+    "                return None\n",
+    "        else:\n",
+    "            # Handle 'curing' specifically based on the presence of keywords\n",
+    "            if \"ambient\" in response.lower():\n",
+    "                solution[\"D\"] = \"Ambient curing\"\n",
+    "            elif \"heat\" in response.lower():\n",
+    "                solution[\"D\"] = \"Heat curing\"\n",
+    "            else:\n",
+    "                # If 'curing' condition is not met, return None\n",
+    "                return None\n",
+    "    print(solution)\n",
+    "    return solution  # Return the solution dictionary if all keys were found with regex\n",
     "\n",
     "    # Return None if neither JSON nor regex parsing succeeded\n",
-    "    return None\n",
+    "    #return None\n",
     "\n",
     "    \n",
     "def format_response_to_model(lab_result):\n",
     "    \"\"\"\n",
     "    Given a lab result, format a response message to the model.\n",
     "    \"\"\"\n",
-    "    return f\"We've achieved a compressive strength of {lab_result['fc_28d_Lab_validation']} MPa. Let's try to do better!\"\n",
+    "    return f\"We've achieved a performance of {lab_result['fc_28d_Lab_validation']}. Let's try to do better!\"\n",
     "\n",
     "def parse_materials(materials_str):\n",
     "    match = re.search(r'(\\d+)/(\\d+) FA/GGBFS', materials_str)\n",
@@ -194,12 +194,11 @@
     "    strength = row[\"fc_28dGroundTruth\"]\n",
     "    \n",
     "    # Create formulation string in the same format as the model's output\n",
-    "    formulation = f'The formulation is Powderkg = {powder}, wc = {wc}, materials = {fa_ggbfs}, curing = {curing_method}'\n",
+    "    formulation = f'The combination is A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method}'\n",
     "    \n",
     "    # Append the formulation and its respective strength to the new DataFrame\n",
     "    new_row = pd.DataFrame({\"Formulation\": [formulation], \"Strength\": [strength]})\n",
     "    formulation_df = pd.concat([formulation_df, new_row], ignore_index=True)\n",
-    "\n",
     "\n",
     "def handle_openai_error(exception):\n",
     "    if isinstance(exception, openai.error.RateLimitError):\n",
@@ -317,13 +316,13 @@
     "\n",
     "# Print the result\n",
     "\n",
-    "print('SUMMARY\\n' +'The design target is to achieve a strength of ',desired_strength, 'MPa within ',num_development.value,' development cycles.\\n' +\n",
+    "print('SUMMARY\\n' +'The design target is to achieve a performance of ',desired_strength, 'within ',num_development.value,' development cycles.\\n' +\n",
     "      'The Experiment is repeated ',num_experiments.value,' times using the ',model_dropdown.value, ' model and the prompt strategy: ',prompt_dropdown.value,'.')\n",
-    "print(\"There are \", num_entries_above_desired,' formulations above or equal to desired_strength.')\n",
+    "print(\"There are \", num_entries_above_desired,' combinations above or equal to desired_strength.')\n",
     "\n",
     "\n",
     "def extract_formulations_from_training_data(training_data):\n",
-    "    pattern = re.compile(r'Powderkg\\s*=\\s*(\\d+),\\s*wc\\s*=\\s*(\\d+\\.\\d+),\\s*materials\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*curing\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
+    "    pattern = re.compile(r'A\\s*=\\s*(\\d+),\\s*B\\s*=\\s*(\\d+\\.\\d+),\\s*C\\s*=\\s*(\\d+\\.\\d+/\\d+\\.\\d+),\\s*D\\s*=\\s*(\\w+)', re.IGNORECASE)\n",
     "    training_formulations = [match.group(0) for data in training_data for match in [pattern.search(data)] if match]\n",
     "    return training_formulations"
    ]
@@ -339,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capstoneproject",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
