--- a/utils/Run_Baselines.ipynb
+++ b/utils/Run_Baselines.ipynb
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capstoneproject",
    "language": "python",
    "name": "python3"
   },
