Changed curing terminology

--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -87,9 +87,9 @@
     "            if conversation_dropdown.value == 'Complete':\n",
     "                print(\"You must propose novel and unique combinations that have not been tested before!\")\n",
     "        if retry_count > 1:\n",
-    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: Ambient curing, Heat curing\"})\n",
+    "            messages.append({\"role\": \"user\", \"content\": \"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: 0, 1\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
-    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: Ambient curing, Heat curing\")\n",
+    "                print(\"Your suggestions must be novel untested and lie exactly on this grid: //A: 360, 370, 380, 390,400, 410, 420, 430, 440, 450 //B: 0.45, 0.5, 0.55, 0.6 //C: 0.7/0.3, 0.6/0.4, 0.5/0.5 //D: 0, 1\")\n",
     "        if retry_count > 2:\n",
     "            messages.append({\"role\": \"user\", \"content\": \"Try harder! Pay close attention to the exact format and order of ther parameters, for instance 0.6/0.4 and not 0.4/0.6\"})\n",
     "            if conversation_dropdown.value == 'Complete':\n",
@@ -251,14 +251,14 @@
     "                            \n",
     "                            valid_solution = True\n",
     "                            \n",
-    "                            print('The suggested formulation achieved a performance of ', current_strength)\n",
+    "                            print('The suggested combination achieved a performance of ', current_strength)\n",
     "                        else:\n",
     "                            print(f\"Iteration {iterations}: No matching lab result found for suggestion {suggested_solution}\")\n",
     "                    else:\n",
     "                        print(f\"Iteration {iterations}: Assistant's response did not contain a valid solution. Trying again.\")\n",
     "\n",
     "                    if not valid_solution:\n",
-    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: Powderkg: {360, 370, 380, 390,400, 410, 420, 430, 440, 450}, wc: {0.45, 0.5, 0.55, 0.6}, materials: {0.7/0.3, 0.6/0.4, 0.5/0.5}, curing: {ambient, heat}. It is extremly important that you stick to these values and reply in the following format: 'The formulation is Powderkg = {your estimate}, wc = {your estimate}, materials = {your estimate}, curing = {your estimate}'\"\n",
+    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: A: {360, 370, 380, 390,400, 410, 420, 430, 440, 450}, B: {0.45, 0.5, 0.55, 0.6}, C: {0.7/0.3, 0.6/0.4, 0.5/0.5}, D: {0, 1}. It is extremly important that you stick to these values and reply in the following format: 'The formulation is A = {your estimate}, B = {your estimate}, C = {your estimate}, D = {your estimate}'\"\n",
     "                else:\n",
     "                    print(f\"Iteration {iterations}: Response not from 'assistant'. Trying again.\")\n",
     "\n",
@@ -271,6 +271,8 @@
     "        # create the file name\n",
     "        if 'None' in prompt_dropdown.value:\n",
     "            prompt_value = 'NoContext'\n",
+    "        elif 'zero' in prompt_dropdown.value:\n",
+    "            prompt_value = 'ZeroContext'\n",
     "        else:\n",
     "            prompt_value = 'Context'\n",
     "\n",
