--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -49,8 +49,16 @@
     "            fa_ggbfs = materials.split(\",\")[0].split(\"-\")[1]\n",
     "            curing_method = materials.split(\",\")[-1].strip()\n",
     "            curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\").replace(\" (Rao et al.)\", \"\")\n",
+    "            if curing_method == 'Ambient curing':\n",
+    "                curing_method = 0\n",
+    "            elif curing_method == 'Heat curing':\n",
+    "                curing_method = 1\n",
+    "            else:\n",
+    "                print('Unknown curing method error in select_and_format_data')\n",
     "            strength = row[\"fc_28dGroundTruth\"]\n",
     "            \n",
+    "            # Certainly needs to be a change here (me)\n",
+    "\n",
     "            training_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method} resulted in a performance of {strength}\"\n",
     "            training_data_formatted.append({'formatted_str': training_str, 'strength': strength})\n",
     "            tested_str = f\"A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method}\"\n",
@@ -116,7 +124,7 @@
     "        # If JSON parsing fails, proceed with regex parsing for the plain text format\n",
     "    keys = ['A', 'B', 'C', 'D']  # Updated to include 'curing'\n",
     "    for key in keys:\n",
-    "        if key != 'D':  # For 'curing', we might need a different approach\n",
+    "        #if key != 'D':  # For 'curing', we might need a different approach\n",
     "            match = re.search(fr\"{key} = (.*?)(,|$)\", response, re.IGNORECASE)\n",
     "            if match:\n",
     "                value = match.group(1).strip()\n",
@@ -124,16 +132,15 @@
     "            else:\n",
     "                # If any key wasn't found using regex, return None\n",
     "                return None\n",
-    "        else:\n",
+    "        #else:\n",
     "            # Handle 'curing' specifically based on the presence of keywords\n",
-    "            if \"ambient\" in response.lower():\n",
-    "                solution[\"D\"] = \"Ambient curing\"\n",
-    "            elif \"heat\" in response.lower():\n",
-    "                solution[\"D\"] = \"Heat curing\"\n",
-    "            else:\n",
+    "            #if \"ambient\" in response.lower():\n",
+    "                #solution[\"D\"] = \"Ambient curing\"\n",
+    "            #elif \"heat\" in response.lower():\n",
+    "                #solution[\"D\"] = \"Heat curing\"\n",
+    "            #else:\n",
     "                # If 'curing' condition is not met, return None\n",
-    "                return None\n",
-    "    print(solution)\n",
+    "                #return None\n",
     "    return solution  # Return the solution dictionary if all keys were found with regex\n",
     "\n",
     "    # Return None if neither JSON nor regex parsing succeeded\n",
@@ -189,7 +196,12 @@
     "    # Remove unwanted string from curing method\n",
     "    curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\")\n",
     "    curing_method = curing_method.replace(\" (Rao et al.)\", \"\")\n",
-    "    \n",
+    "    if curing_method == 'Ambient curing':\n",
+    "        curing_method = 0\n",
+    "    elif curing_method == 'Heat curing':\n",
+    "        curing_method = 1\n",
+    "    else:\n",
+    "        print('Unknown curing method')\n",
     "    # Compressive strength\n",
     "    strength = row[\"fc_28dGroundTruth\"]\n",
     "    \n",
